Fix bracket-matcher and wrap guide colors

--- a/styles/base.less
+++ b/styles/base.less
@@ -356,7 +356,7 @@
 
 atom-text-editor::shadow  .bracket-matcher .region {
   z-index: 100;
-  padding: 1px;
-  background-color: @bracket;
-  border: 1px solid @bracket;
+  padding: 2px;
+  background-color: rgba(255,255,255, .2);
+  border: 1px solid @hydra;
 }
