--- a/styles/colors.less
+++ b/styles/colors.less
@@ -2,7 +2,7 @@
 
 @lighter-gray: #c5c8c6;
 @light-gray: #758677;
-@indent-wrap: #1d1d1d;
+@indent-wrap: #151515;
 @gray: #373b41;
 @dark-gray: #23262d;
 @very-dark-gray: #1d1f21;
@@ -17,8 +17,8 @@
 @orange: #FF525F;
 @white: #f5f5f5;
 
-@hydra: rgb(213, 23, 69);
+@hydra: #ed1348;
 @cursor: #ffe800;
 @this: #93413a;
 
-@bracket: rgba(255, 255, 255, .2);
+@bracket: rgba(255, 232, 0, 0.3);
